<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/titles_style"
                android:text="@string/title_update_vehicle"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:weightSum="3"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/plaque"
                tools:ignore="MissingConstraints"
                android:textSize="18dp"
                android:textColor="@color/text_outline"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/plaque_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:enabled="false"
                android:background="@drawable/contour_of_textv"
                android:layout_weight="2"/>
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/brand"
                tools:ignore="MissingConstraints"
                android:textSize="18dp"
                android:textColor="@color/text_outline"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/brand_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:background="@drawable/contour_of_textv"
                android:layout_weight="2"/>
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/model"
                tools:ignore="MissingConstraints"
                android:textSize="18dp"
                android:textColor="@color/text_outline"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/model_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:background="@drawable/contour_of_textv"
                android:layout_weight="2"/>
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/number_of_doors"
                tools:ignore="MissingConstraints"
                android:textSize="18dp"
                android:textColor="@color/text_outline"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/num_of_doors_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:background="@drawable/contour_of_textv"
                android:layout_weight="2"/>
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/type_of_vehicle"
                tools:ignore="MissingConstraints"
                android:textSize="18dp"
                android:textColor="@color/text_outline"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/type_of_vehicle_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:background="@drawable/contour_of_textv"
                android:layout_weight="2"/>
        </TableRow>


        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_btn_title"
                android:background="@drawable/contour_of_textv"
                android:onClick="updateVehi"/>
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>