<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShowVehicle">


            <TextView
                android:id="@+id/plaque_t"
                android:layout_width="@dimen/edit_text_dimentios"
                android:layout_height="wrap_content"
                android:text="@string/plaque"
                android:textSize="@dimen/text_size2"
                android:layout_alignParentTop="false"
                android:layout_marginTop="@dimen/margin_top_first_et" />
    <TextView
        android:id="@+id/plaque"
        android:layout_width="@dimen/edit_text_dimentios"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_alignParentTop="false"
        android:background="@drawable/contour_of_textv"
        android:layout_marginTop="@dimen/margin_top_first_et"
        android:layout_marginLeft="@dimen/margin_left_first_et"/>
            <TextView
                android:id="@+id/brand_t"
                android:layout_width="@dimen/edit_text_dimentios"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textSize="@dimen/text_size2"
                android:layout_below="@+id/plaque_t"
                android:layout_marginTop="@dimen/margin_text"/>
    <TextView
        android:id="@+id/brand"
        android:layout_width="@dimen/edit_text_dimentios"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:background="@drawable/contour_of_textv"
        android:layout_below="@+id/plaque"
        android:layout_marginLeft="@dimen/margin_left_first_et"/>
            <TextView
                android:id="@+id/model_t"
                android:layout_width="@dimen/edit_text_dimentios"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textSize="@dimen/text_size2"
                android:layout_below="@+id/brand_t"
                android:layout_marginTop="@dimen/margin_text"/>
    <TextView
        android:id="@+id/model"
        android:layout_width="@dimen/edit_text_dimentios"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:background="@drawable/contour_of_textv"
        android:layout_below="@+id/brand"
        android:layout_marginLeft="@dimen/margin_left_first_et"/>
            <TextView
                android:id="@+id/num_of_doors_t"
                android:layout_width="@dimen/edit_text_dimentios"
                android:layout_height="wrap_content"
                android:text="puertas"
                android:layout_below="@+id/model_t"
                android:layout_marginTop="@dimen/margin_text"/>
    <TextView
        android:id="@+id/num_of_doors"
        android:layout_width="@dimen/edit_text_dimentios"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:background="@drawable/contour_of_textv"
        android:layout_below="@+id/model"
        android:layout_marginLeft="@dimen/margin_left_first_et"/>
            <TextView
                android:id="@+id/type_of_vehicle_t"
                android:layout_width="@dimen/edit_text_dimentios"
                android:layout_height="wrap_content"
                android:text="@string/type_of_vehicle"
                android:textSize="@dimen/text_size2"
                android:layout_below="@+id/num_of_doors_t"
                android:layout_marginTop="@dimen/margin_text"/>
    <TextView
        android:id="@+id/type_of_vehicle"
        android:layout_width="@dimen/edit_text_dimentios"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:background="@drawable/contour_of_textv"
        android:layout_below="@+id/num_of_doors"
        android:layout_marginLeft="@dimen/margin_left_first_et"/>

        <TextView
            android:id="@+id/vehicle_features"
            android:layout_width="@dimen/edit_text_dimentios"
            android:layout_height="wrap_content"
            android:text="Mas características"
            android:textSize="@dimen/text_size2"
            android:layout_below="@+id/type_of_vehicle_t"
            android:layout_marginTop="@dimen/margin_text"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:onClick="additionalFeatures"
        android:layout_marginLeft="@dimen/margin_left_first_et"
        android:layout_below="@+id/type_of_vehicle"/>

    <ImageButton
        android:id="@+id/update"
        android:layout_width="98dp"
        android:layout_height="95dp"
        android:layout_below="@+id/type_of_vehicle"
        android:layout_marginLeft="@dimen/margin_left_first_et"
        android:layout_marginTop="60dp"
        android:background="@color/colorAccent"
        android:onClick="updateVehicle"
        android:src="@drawable/update" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="99dp"
        android:layout_height="95dp"
        android:layout_below="@+id/type_of_vehicle"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/update"
        android:src="@drawable/delete"
        android:background="@color/colorPrimary"
        android:onClick="deleteVehicle"/>

</RelativeLayout>