<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    android:orientation="horizontal"
    tools:context=".VehicleDriver">

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plaque"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_rigthLayout_top"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:gravity="center_horizontal"
            android:layout_marginTop="7dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:gravity="center_horizontal"
            android:layout_marginTop="7dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Puertas"
            android:gravity="center_horizontal"
            android:layout_marginTop="7dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo vehiculo"
            android:gravity="center_horizontal"
            android:layout_marginTop="7dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Carcterísticas adicionales"
            android:gravity="center_horizontal"
            android:layout_marginTop="7dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="fitCenter"
            android:src="@drawable/register_car" />
    <EditText
        android:id="@+id/plaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_of_textv2" />

    <EditText
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_of_textv2"/>

    <EditText
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_of_textv2"/>

    <EditText
        android:id="@+id/num_of_doors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_of_textv2"/>

    <EditText
        android:id="@+id/type_of_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_of_textv2"/>
        <ImageView
            android:id="@+id/features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:onClick="addFeatures"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">
        <!--<Button
            android:id="@+id/resgister_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="setData"
            android:text="@string/register_button_text"
            android:background="@drawable/contour_of_textv2"/>-->

        </LinearLayout>

    </LinearLayout>

</LinearLayout>